Add new style code

--- a/css/main.css
+++ b/css/main.css
@@ -9,3 +9,15 @@ main {
 tbody tr:nth-child(odd) {
   background-color: #e2e2e2;
 }
+
+.year {
+  width: 7em;
+}
+
+.distance {
+  width: 6em;
+}
+
+.notes {
+  width: 16em;
+}
